--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "js-kata",
   "version": "1.0.0",
-  "description": "",
+  "description": "TYPESCRIPT!",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --require babel-core/register"
+    "test": "ts-mocha test.ts"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,18 @@
     "babel-core": "^6.26.3",
     "babel-plugin-transform-builtin-extend": "^1.1.2",
     "babel-preset-es2015": "^6.24.1",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "power-assert": "^1.6.0",
+    "ts-loader": "^4.4.2",
+    "ts-node": "^7.0.0",
+    "tslint": "^5.11.0",
+    "typescript": "^2.9.2"
+  },
+  "devDependencies": {
+    "@types/assert": "^0.0.31",
+    "@types/expect": "^1.20.3",
+    "@types/mocha": "^5.2.5",
+    "@types/power-assert": "^1.5.0",
+    "ts-mocha": "^1.2.0"
   }
 }
